--- a/index.html
+++ b/index.html
@@ -1,25 +1,31 @@
 <!doctype html>
-<html lang="en">
+<html>
   <head>
-  <script>
-    (function () {
-      const params = new URLSearchParams(window.location.search);
-      const p = params.get("p");
-      if (p) {
-        const q = params.get("q") ? "?" + decodeURIComponent(params.get("q")) : "";
-        const h = params.get("h") ? "#" + decodeURIComponent(params.get("h")) : "";
-        window.history.replaceState(null, "", p + q + h);
-      }
-    })();
-  </script>
-
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dmm-checklist</title>
+    <title>Redirecting…</title>
+    <script>
+      // GitHub Pages SPA redirect (project site)
+      // https://<user>.github.io/<repo>/some/route  ->  /<repo>/?p=/some/route
+      var pathSegmentsToKeep = 1; // keep "/DMM-Checklist"
+      var l = window.location;
+
+      var segments = l.pathname.split("/").filter(Boolean);
+      var repo = segments.slice(0, pathSegmentsToKeep).join("/");
+      var rest = "/" + segments.slice(pathSegmentsToKeep).join("/");
+
+      var newUrl =
+        l.protocol +
+        "//" +
+        l.host +
+        "/" +
+        repo +
+        "/?p=" +
+        encodeURIComponent(rest) +
+        (l.search ? "&q=" + encodeURIComponent(l.search.slice(1)) : "") +
+        (l.hash ? "&h=" + encodeURIComponent(l.hash.slice(1)) : "");
+
+      l.replace(newUrl);
+    </script>
   </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
+  <body></body>
 </html>
